@@ -445,6 +445,7 @@ ALIAS_Apple_Iris                                *       13000   1       1       
 ALIAS_Apple_Iris                                *       13200   1       1       1
 ALIAS_Apple_Iris                                *       14700   1       1       1
 ALIAS_Apple_Iris                                *       14800   1       1       1
+ALIAS_Apple_Iris                                *       15200   1       1       10
 
 ALIAS_Apple_Iris_Pro                            *       5000    1       8       8
 ALIAS_Apple_Iris_Pro                            *       6100    1       4       16
