@@ -345,6 +345,7 @@ static const char *USAGE_BIG[] =
   "   8200 | 1Password, cloudkeychain                         | Password Managers",
   "  11300 | Bitcoin/Litecoin wallet.dat                      | Password Managers",
   "  12700 | Blockchain, My Wallet                            | Password Managers",
+  "  15200 | Blockchain, My Wallet, V2                        | Password Managers",
   "  13400 | KeePass 1 (AES/Twofish) and KeePass 2 (AES)      | Password Managers",
   "  99999 | Plaintext                                        | Plaintext",
   "",
