@@ -46,7 +46,7 @@ my $hashcat = "./hashcat";
 
 my $MAX_LEN = 55;
 
-my @modes = (0, 10, 11, 12, 20, 21, 22, 23, 30, 40, 50, 60, 100, 101, 110, 111, 112, 120, 121, 122, 125, 130, 131, 132, 133, 140, 141, 150, 160, 200, 300, 400, 500, 900, 1000, 1100, 1300, 1400, 1410, 1411, 1420, 1430, 1440, 1441, 1450, 1460, 1500, 1600, 1700, 1710, 1711, 1720, 1730, 1740, 1722, 1731, 1750, 1760, 1800, 2100, 2400, 2410, 2500, 2600, 2611, 2612, 2711, 2811, 3000, 3100, 3200, 3710, 3711, 3300, 3500, 3610, 3720, 3800, 3910, 4010, 4110, 4210, 4300, 4400, 4500, 4520, 4521, 4522, 4600, 4700, 4800, 4900, 5000, 5100, 5300, 5400, 5500, 5600, 5700, 5800, 6000, 6100, 6300, 6400, 6500, 6600, 6700, 6800, 6900, 7000, 7100, 7200, 7300, 7400, 7500, 7700, 7800, 7900, 8000, 8100, 8200, 8300, 8400, 8500, 8600, 8700, 8900, 9100, 9200, 9300, 9400, 9500, 9600, 9700, 9800, 9900, 10000, 10100, 10200, 10300, 10400, 10500, 10600, 10700, 10800, 10900, 11000, 11100, 11200, 11300, 11400, 11500, 11600, 11900, 12000, 12001, 12100, 12200, 12300, 12400, 12600, 12700, 12800, 12900, 13000, 13100, 13200, 13300, 13400, 13500, 13600, 13800, 13900, 14000, 14100, 14400, 14700, 14800, 14900, 15000, 15100, 99999);
+my @modes = (0, 10, 11, 12, 20, 21, 22, 23, 30, 40, 50, 60, 100, 101, 110, 111, 112, 120, 121, 122, 125, 130, 131, 132, 133, 140, 141, 150, 160, 200, 300, 400, 500, 900, 1000, 1100, 1300, 1400, 1410, 1411, 1420, 1430, 1440, 1441, 1450, 1460, 1500, 1600, 1700, 1710, 1711, 1720, 1730, 1740, 1722, 1731, 1750, 1760, 1800, 2100, 2400, 2410, 2500, 2600, 2611, 2612, 2711, 2811, 3000, 3100, 3200, 3710, 3711, 3300, 3500, 3610, 3720, 3800, 3910, 4010, 4110, 4210, 4300, 4400, 4500, 4520, 4521, 4522, 4600, 4700, 4800, 4900, 5000, 5100, 5300, 5400, 5500, 5600, 5700, 5800, 6000, 6100, 6300, 6400, 6500, 6600, 6700, 6800, 6900, 7000, 7100, 7200, 7300, 7400, 7500, 7700, 7800, 7900, 8000, 8100, 8200, 8300, 8400, 8500, 8600, 8700, 8900, 9100, 9200, 9300, 9400, 9500, 9600, 9700, 9800, 9900, 10000, 10100, 10200, 10300, 10400, 10500, 10600, 10700, 10800, 10900, 11000, 11100, 11200, 11300, 11400, 11500, 11600, 11900, 12000, 12001, 12100, 12200, 12300, 12400, 12600, 12700, 12800, 12900, 13000, 13100, 13200, 13300, 13400, 13500, 13600, 13800, 13900, 14000, 14100, 14400, 14700, 14800, 14900, 15000, 15100, 15200, 99999);
 
 my %is_unicode      = map { $_ => 1 } qw(30 40 130 131 132 133 140 141 1000 1100 1430 1440 1441 1730 1740 1731 5500 5600 8000 9400 9500 9600 9700 9800 11600 13500 13800);
 my %less_fifteen    = map { $_ => 1 } qw(500 1600 1800 2400 2410 3200 6300 7400 10500 10700);
@@ -2597,6 +2597,29 @@ sub verify
 
       next unless (exists ($db->{$hash_in}) and (! defined ($db->{$hash_in})));
     }
+    elsif ($mode == 15200)
+    {
+      my $index1 = index ($line, ':');
+
+      next if ($index1 < 0);
+
+      $hash_in = substr ($line, 0, $index1);
+      $word = substr ($line, $index1 + 1);
+
+      my (undef, $signature, $version, $iter_count, $data_len, $data_buf) = split '\$', $hash_in;
+
+      next unless ($signature eq "blockchain");
+
+      next unless ($version eq "v2");
+
+      next unless (($data_len * 2) == length $data_buf);
+
+      $iter  = $iter_count;
+      $salt  = substr ($data_buf, 0, 32);
+      $param = substr ($data_buf, 32);
+
+      next unless (exists ($db->{$hash_in}) and (! defined ($db->{$hash_in})));
+    }
     else
     {
       print "ERROR: hash mode is not supported\n";
@@ -2937,6 +2960,40 @@ sub verify
       $len = length $hash_out;
 
       return unless (substr ($line, 0, $len) eq $hash_out);
+    }
+    elsif ($mode == 15200)
+    {
+      # this is very special, we can't call gen_hash () because the param part is not always the same
+      # we only know that it should contain the letters "guid" at the beginning of the decryted string
+
+      my $pbkdf2 = Crypt::PBKDF2->new (
+        hash_class => 'HMACSHA1',
+        iterations   => 5000,
+        output_len   => 32
+      );
+
+      my $salt_bin = pack ("H*", $salt);
+
+      my $key = $pbkdf2->PBKDF2 ($salt_bin, $word);
+
+      my $cipher = Crypt::CBC->new ({
+        key         => $key,
+        cipher      => "Crypt::Rijndael",
+        iv          => $salt_bin,
+        literal_key => 1,
+        header      => "none",
+        keysize     => 32
+      });
+
+      my $param_bin = pack ("H*", $param);
+
+      my $decrypted = $cipher->decrypt ($param_bin);
+
+      my $decrypted_part = substr ($decrypted, 1, 16);
+
+      return unless ($decrypted_part =~ /"guid"/);
+
+      $hash_out = $hash_in;
     }
     else
     {
@@ -3447,6 +3504,10 @@ sub passthrough
     elsif ($mode == 15100)
     {
       $tmp_hash = gen_hash ($mode, $word_buf, substr ($salt_buf, 0, 8));
+    }
+    elsif ($mode == 15200)
+    {
+      $tmp_hash = gen_hash ($mode, $word_buf, substr ($salt_buf, 0, 32));
     }
     else
     {
@@ -4371,6 +4432,20 @@ sub single
         else
         {
           rnd ($mode, $i, 8);
+        }
+      }
+    }
+    elsif ($mode == 15200)
+    {
+      for (my $i = 1; $i < 32; $i++)
+      {
+        if ($len != 0)
+        {
+          rnd ($mode, $len, 32);
+        }
+        else
+        {
+          rnd ($mode, $i, 32);
         }
       }
     }
@@ -8032,6 +8107,45 @@ END_CODE
     }
 
     $tmp_hash = sprintf ("\$sha1\$%d\$%s\$%s", $iterations, $salt_buf, $hash_buf);
+  }
+  elsif ($mode == 15200)
+  {
+    my $iterations = 5000;
+
+    if (defined ($iter))
+    {
+      $iterations = $iter;
+    }
+
+    my $data = qq|{
+  "guid" : "00000000-0000-0000-0000-000000000000",
+  "sharedKey" : "00000000-0000-0000-0000-000000000000",
+  "options" : {"pbkdf2_iterations":$iterations,"fee_policy":0,"html5_notifications":false,"logout_time":600000,"tx_display":0,"always_keep_local_backup":false}|;
+
+    my $salt_buf_bin = pack ("H*", $salt_buf);
+
+    my $hasher = Crypt::PBKDF2->hasher_from_algorithm ('HMACSHA1');
+
+    my $pbkdf2 = Crypt::PBKDF2->new (
+      hasher       => $hasher,
+      iterations   => $iterations,
+      output_len   => 32
+    );
+
+    my $key = $pbkdf2->PBKDF2 ($salt_buf_bin, $word_buf);
+
+    my $cipher = Crypt::CBC->new ({
+      key         => $key,
+      cipher      => "Crypt::Rijndael",
+      iv          => $salt_buf_bin,
+      literal_key => 1,
+      header      => "none",
+      keysize     => 32
+    });
+
+    my $encrypted = unpack ("H*", $cipher->encrypt ($data));
+
+    $tmp_hash = sprintf ("\$blockchain\$v2\$%d\$%s\$%s", $iterations, length ($salt_buf . $encrypted) / 2, $salt_buf . $encrypted);
   }
   elsif ($mode == 99999)
   {
